ansible/roles/ocp4-workload-ccnrd/files/coolstore-monolith-binary-build-template.yaml
---
apiVersion: template.openshift.io/v1
kind: Template
labels:
  template: coolstore-monolith-binary-build
message: The resources (build config, deploy config, service, imagestreams, etc) for
  running the Coolstore Monolith demo has been created in your project. To deploy
  the application go to your source directoy and build that code using mvn -Popenshift
  package and then start the build using oc start-build coolstore --from-file=deployments/ROOT.war.
metadata:
  annotations:
    description: Application template Coolstore Monolith using binary build.
    iconClass: icon-jboss
    openshift.io/display-name: Coolstore Monolith using binary build
    tags: eap,postgresql,javaee,java,database,jboss,xpaas
    version: 1.0.0
  creationTimestamp: "2020-02-08T04:25:43Z"
  name: coolstore-monolith-binary-build
  namespace: openshift
  resourceVersion: "42535"
  selfLink: /apis/template.openshift.io/v1/namespaces/openshift/templates/coolstore-monolith-binary-build
  uid: 2fc74cea-c4fc-4f0a-a373-7a48219ba96d
objects:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: The web server's http port.
      service.alpha.openshift.io/dependencies: '[{"name":"coolstore-postgresql","namespace":"","kind":"Service"}]'
    labels:
      application: coolstore
    name: coolstore
  spec:
    ports:
    - port: 8080
      targetPort: 8080
    selector:
      deploymentConfig: coolstore
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: The database server's port.
    labels:
      application: coolstore
    name: coolstore-postgresql
  spec:
    ports:
    - port: 5432
      targetPort: 5432
    selector:
      deploymentConfig: coolstore-postgresql
- apiVersion: v1
  id: coolstore-http
  kind: Route
  metadata:
    annotations:
      description: Route for application's http service.
    labels:
      application: coolstore
    name: www
  spec:
    to:
      name: coolstore
- apiVersion: v1
  kind: ImageStream
  metadata:
    labels:
      application: coolstore
      build: coolstore
    name: coolstore
- apiVersion: v1
  kind: BuildConfig
  metadata:
    labels:
      application: coolstore
    name: coolstore
  spec:
    output:
      to:
        kind: ImageStreamTag
        name: coolstore:latest
    source:
      binary: {}
      type: Binary
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: jboss-eap72-openshift:1.0
          namespace: ${IMAGE_STREAM_NAMESPACE}
      type: Source
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      application: coolstore
    name: coolstore
  spec:
    replicas: 1
    selector:
      deploymentConfig: coolstore
    strategy:
      resources: {}
      type: Recreate
    template:
      metadata:
        labels:
          application: coolstore
          deploymentConfig: coolstore
        name: coolstore
      spec:
        containers:
        - env:
          - name: DB_SERVICE_PREFIX_MAPPING
            value: coolstore-postgresql=DB
          - name: DB_JNDI
            value: java:jboss/datasources/CoolstoreDS
          - name: DB_USERNAME
            value: coolstore
          - name: DB_PASSWORD
            value: coolstore123
          - name: DB_DATABASE
            value: monolith
          - name: TX_DATABASE_PREFIX_MAPPING
            value: coolstore-postgresql=DB
          - name: MQ_TOPICS
            value: orders
          - name: OPENSHIFT_KUBE_PING_LABELS
            value: application=coolstore
          - name: OPENSHIFT_KUBE_PING_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          - name: HTTPS_KEYSTORE_DIR
            value: /etc/eap-secret-volume
          - name: HTTPS_KEYSTORE
            value: keystore.jks
          - name: HTTPS_KEYSTORE_TYPE
            value: JKS
          - name: HTTPS_NAME
            value: jboss
          - name: HTTPS_PASSWORD
            value: mykeystorepass
          - name: MQ_CLUSTER_PASSWORD
            value: coolstore123
          - name: JGROUPS_ENCRYPT_SECRET
            value: coolstore-secret
          - name: JGROUPS_ENCRYPT_KEYSTORE_DIR
            value: /etc/jgroups-encrypt-secret-volume
          - name: JGROUPS_ENCRYPT_KEYSTORE
            value: jgroups.jceks
          - name: JGROUPS_ENCRYPT_NAME
            value: secret-key
          - name: JGROUPS_ENCRYPT_PASSWORD
            value: password
          - name: JGROUPS_CLUSTER_PASSWORD
            value: openshift123
          - name: DEFAULT_JOB_REPOSITORY
            value: coolstore-postgresql
          - name: TIMER_SERVICE_DATA_STORE
            value: coolstore-postgresql
          image: coolstore
          imagePullPolicy: Always
          lifecycle:
            preStop:
              exec:
                command:
                - /opt/eap/bin/jboss-cli.sh
                - -c
                - :shutdown(timeout=60)
          readinessProbe:
            httpGet:
              path: /health.jsp
              port: 8080
              scheme: HTTP
            timeoutSeconds: 5
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 20
            initialDelaySeconds: 20
          livenessProbe:
            httpGet:
              path: /health.jsp
              port: 8080
              scheme: HTTP
            timeoutSeconds: 5
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 20
            initialDelaySeconds: 20
          name: coolstore
          ports:
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 8443
            name: https
            protocol: TCP
          - containerPort: 8888
            name: ping
            protocol: TCP
          volumeMounts:
          - mountPath: /etc/eap-secret-volume
            name: eap-keystore-volume
            readOnly: true
          - mountPath: /etc/jgroups-encrypt-secret-volume
            name: eap-jgroups-keystore-volume
            readOnly: true
        serviceAccountName: coolstore-serviceaccount
        terminationGracePeriodSeconds: 75
        volumes:
        - name: eap-keystore-volume
          secret:
            secretName: coolstore-secret
        - name: eap-jgroups-keystore-volume
          secret:
            secretName: coolstore-secret
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - coolstore
        from:
          kind: ImageStreamTag
          name: coolstore:latest
      type: ImageChange
    - type: ConfigChange
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      application: coolstore
    name: coolstore-postgresql
  spec:
    replicas: 1
    selector:
      deploymentConfig: coolstore-postgresql
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          application: coolstore
          deploymentConfig: coolstore-postgresql
        name: coolstore-postgresql
      spec:
        containers:
        - env:
          - name: POSTGRESQL_USER
            value: coolstore
          - name: POSTGRESQL_PASSWORD
            value: coolstore123
          - name: POSTGRESQL_DATABASE
            value: monolith
          - name: POSTGRESQL_MAX_CONNECTIONS
            value: "100"
          - name: POSTGRESQL_MAX_PREPARED_TRANSACTIONS
            value: "100"
          image: postgresql:10
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 5432
            timeoutSeconds: 1
          name: coolstore-postgresql
          ports:
          - containerPort: 5432
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /bin/sh
              - -i
              - -c
              - psql -h 127.0.0.1 -U $POSTGRESQL_USER -q -d $POSTGRESQL_DATABASE -c
                'SELECT 1'
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
        terminationGracePeriodSeconds: 60
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - coolstore-postgresql
        from:
          kind: ImageStreamTag
          name: postgresql:10
          namespace: ${IMAGE_STREAM_NAMESPACE}
      type: ImageChange
    - type: ConfigChange
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: coolstore-serviceaccount
  secrets:
  - name: coolstore-secret
- apiVersion: v1
  groupNames: null
  kind: RoleBinding
  metadata:
    name: coolstore-serviceaccount_view
  roleRef:
    name: view
  subjects:
  - kind: ServiceAccount
    name: coolstore-serviceaccount
- apiVersion: v1
  groupNames:
  - system:serviceaccounts:${USER_ID}-coolstore-prod
  kind: RoleBinding
  metadata:
    name: ci_admin
  roleRef:
    name: admin
  subjects:
  - kind: Group
    name: system:serviceaccounts:${USER_ID}-coolstore-prod
- apiVersion: v1
  data:
    jgroups.jceks: zs7OzgAAAAIAAAABAAAAAwAKc2VjcmV0LWtleQAAAVDQhuHmrO0ABXNyADNjb20uc3VuLmNyeXB0by5wcm92aWRlci5TZWFsZWRPYmplY3RGb3JLZXlQcm90ZWN0b3LNV8pZ5zC7UwIAAHhyABlqYXZheC5jcnlwdG8uU2VhbGVkT2JqZWN0PjY9psO3VHACAARbAA1lbmNvZGVkUGFyYW1zdAACW0JbABBlbmNyeXB0ZWRDb250ZW50cQB+AAJMAAlwYXJhbXNBbGd0ABJMamF2YS9sYW5nL1N0cmluZztMAAdzZWFsQWxncQB+AAN4cHVyAAJbQqzzF/gGCFTgAgAAeHAAAAAPMA0ECHcwLGK6EDyLAgEUdXEAfgAFAAAAmCu9wRKf1aYYUOEWe406ncPtIdm3147G7MJyWUu2kJVY15a2QxeZi9w5J3AF6T64CvylUuQjpcC4DWXwVn9BefntkBR8CzTiH [...]
    keystore.jks: /u3+7QAAAAIAAAABAAAAAQAFamJvc3MAAAFVFbYp5AAABQIwggT+MA4GCisGAQQBKgIRAQEFAASCBOqe/lTeehnds9ffJp/EYKY2K7o9CvvyvgiqvdaGqiZxwWjmoYBEuBxJBUkr7uyYr2g3Viui18djJh9paWdBfPRCEWsLxbMBmig+5OXe1U536PTNZlzkdrwSJpusiwwWLiog/kQ+Gp82VzHxsueNVkewKZ6LvdAq+5Pw7148cxgfnm+2j0La1YnX4/TAtY6A33HjU3HxPxpkLCBP66THxjJvm+n5xg+6eAPu6n/c3mWShhudf0k7FAHLgqMqZt22GMlIv73azdz5kf+opcF8nHN/SDnrgmBbX+GBFvMQ64a3zfLGMnCH8R7L2v5K0uH4AvOHHU9+g7KGk/obPOFyqjloPGIGwzyX4UhxsxP9+wU45RVg02SdoOsqsKYeF7JV1t+uj1+WXDkEaxGYx9u5bF [...]
  kind: Secret
  metadata:
    annotations:
      description: Default HTTPS keystore (keystore.jks) with name 'jboss' and password
        'mykeystorepass' and JGoups keystore (jgroups.jceks) with name 'secret-key'
        and password 'password'
    name: coolstore-secret
parameters:
- description: User ID for Dev/Prod namespaces
  displayName: User ID
  required: true
  name: USER_ID
- description: Namespace in which the ImageStreams for Red Hat Middleware images are
    installed. These ImageStreams are normally installed in the openshift namespace.
    You should only need to modify this if you've installed the ImageStreams in a
    different namespace/project.
  displayName: ImageStream Namespace
  name: IMAGE_STREAM_NAMESPACE
  required: true
  value: openshift
